# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.299 2011/10/22 20:22:06 keri Exp $

*swi-prolog-5.11.29 (22 Oct 2011)

  22 Oct 2011; <keri@gentoo.org> +swi-prolog-5.11.29.ebuild:
  Bump -5.11 develop ment version

  22 Oct 2011; <keri@gentoo.org> -swi-prolog-5.11.24.ebuild,
  -swi-prolog-5.11.25.ebuild, -swi-prolog-5.11.26.ebuild,
  -swi-prolog-5.11.26-r1.ebuild:
  Remove old development versions

  11 Oct 2011; <keri@gentoo.org> swi-prolog-5.10.5-r1.ebuild,
  swi-prolog-5.11.28.ebuild:
  Include PLCFLAGS, PLLDFLAGS in swipl pkg-config file. Closes #380661

  04 Oct 2011; <keri@gentoo.org> swi-prolog-5.10.5-r1.ebuild,
  swi-prolog-5.11.28.ebuild:
  Do not use internal zlib header handling; this invalidates the need for
  zutil.h

*swi-prolog-5.11.28 (03 Oct 2011)

  03 Oct 2011; <keri@gentoo.org> +swi-prolog-5.11.28.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.27 (14 Sep 2011)

  14 Sep 2011; <keri@gentoo.org> +swi-prolog-5.11.27.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.26-r1 (26 Aug 2011)
*swi-prolog-5.10.5-r1 (26 Aug 2011)

  26 Aug 2011; <keri@gentoo.org> +swi-prolog-5.10.5-r1.ebuild,
  +swi-prolog-5.11.26-r1.ebuild:
  Specify correct include-path in swipl.pc. Closes #380661

*swi-prolog-5.10.5 (21 Aug 2011)

  21 Aug 2011; <keri@gentoo.org> +swi-prolog-5.10.5.ebuild:
  Version bump

*swi-prolog-5.11.26 (21 Aug 2011)

  21 Aug 2011; <keri@gentoo.org> +swi-prolog-5.11.26.ebuild:
  Bump -5.11 development version

  22 Jul 2011; <keri@gentoo.org> -swi-prolog-5.11.20.ebuild,
  -swi-prolog-5.11.21.ebuild, -swi-prolog-5.11.22.ebuild,
  -swi-prolog-5.11.23.ebuild:
  Remove old versions

*swi-prolog-5.11.25 (17 Jul 2011)

  17 Jul 2011; <keri@gentoo.org> +swi-prolog-5.11.25.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.24 (01 Jul 2011)

  01 Jul 2011; <keri@gentoo.org> +swi-prolog-5.11.24.ebuild: